--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                 </div>
 
                 <div>
-                    <button id="H1" onclick="addshome1()">+1</button>
-                    <button id="H2" onclick="addshome2()">+2</button>
-                    <button id="H3" onclick="addshome3()">+3</button>
-                    <button id="G1" onclick="addsguest1()">+1</button>
-                    <button id="G2" onclick="addsguest2()">+2</button>
-                    <button id="G3" onclick="addsguest3()">+3</button>
-                    <button id="NEW" onclick="newgame()">New game</button>
-                    <button id="TIMER">00</button>
-                    <button id="HSETS" onclick="HSETSS()">0</button>
-                    <button id="GSETS" onclick="GSETSS()">0</button>
+                    <button id="H1" onclick="func(1)">+1</button>
+                    <button id="H2" onclick="func(2)">+2</button>
+                    <button id="H3" onclick="func(3)">+3</button>
+                    <button id="G1" onclick="func(4)">+1</button>
+                    <button id="G2" onclick="func(5)">+2</button>
+                    <button id="G3" onclick="func(6)">+3</button>
+                    <button id="NEW" onclick="func(9)">New game</button>
+                    <button id="TIMER"onclick="func(10)"></button>
+                    <button id="HSETS" onclick="func(7)">0</button>
+                    <button id="GSETS" onclick="func(8)">0</button>
                 </div>>
 
         </div>
